# text-embeddings-inference

./: Cargo.toml
backends/: Cargo.toml
backends/candle/: Cargo.toml
backends/candle/src/: flash_attn.rs  lib.rs
backends/candle/src/layers/: cublaslt.rs
backends/candle/src/models/: debertav2.rs  mod.rs
backends/candle/tests/: common.rs  test_bert.rs
backends/candle/tests/snapshots/: test_bert__bert_batch.snap  test_bert__bert_batch_pooled.snap  test_bert__bert_batch_raw.snap  test_bert__bert_classification_single.snap  test_bert__bert_single.snap  test_bert__bert_single_pooled.snap  test_bert__bert_single_raw.snap  test_bert__emotions_batch.snap  test_bert__emotions_single.snap
router/: Cargo.toml
