[package]
name = "text-embeddings-backend-candle"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { workspace = true, optional = true }
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
candle-flash-attn = { workspace = true, optional = true}
candle-flash-attn-v1 = { workspace = true, optional = true }
candle-cublaslt = { workspace = true, optional = true }
candle-layer-norm = { workspace = true, optional = true }
candle-rotary = { workspace = true, optional = true }
nohash-hasher = { workspace = true }
text-embeddings-backend-core = { path = "../core" }
tracing = { workspace = true }
safetensors = "^0.4"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
memmap2 = "^0.9"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml", "redactions"] }
is_close = "0.1.3"
hf-hub = { workspace = true, features = ["ureq"] }
anyhow = { workspace = true }
tokenizers = { workspace = true }
serial_test = { workspace = true }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }

[features]
accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate"]
metal = ["candle/metal", "candle-nn/metal"]
mkl = ["dep:intel-mkl-src", "candle/_mkl"]
cuda = ["candle/_cuda", "candle-nn/_cuda", "dep:candle-cublaslt", "dep:candle-layer-norm", "dep:candle-rotary"]
flash-attn-v1 = ["dep:candle-flash-attn-v1", "cuda"]
flash-attn = ["dep:candle-flash-attn", "cuda"]
